<resources>
    <string name="app_name">A_Favour</string>
    <string name="AFAVOUR" translatable="false">A FAVOUR</string>

    <!--Alert-->
    <string name="alertLogoutD">Are you sure you wold like to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!---UPLOAD EDIT DELETE FAVOUR-->
    <string name="favorUploaded">Favour uploaded</string>
    <string name="favorUpdated">Favour updated</string>
    <string name="favourDeleted">Favour deleted</string>
    <string name="errorfilled">Check that all the fields are filled</string>

    <!---Register-->
    <string name="errorRegister">Error on register</string>
    <string name="Registergood">Registration completed successfully</string>
    <string name="fivechar">The password must be at least 5 characters</string>
    <string name="dontmach">Passwords do not match</string>
    <string name="alredyExists">Alredy exist a user with this username. Please try another</string>

    <string name="chat">CHAT </string>

    <!---UpdateProfile-->
    <string name="updateProfile">Profile updated successfully</string>
    <string name="errorUpdate">Error updating profile</string>
    <string name="update">Update profile</string>


    <!---Profile-->
    <string name="profileImage">Opinions</string>
    <string name="edit">Edit profile</string>
    <string name="back_arrow" translatable="false">Go to previous page</string>
    <string name="location">Location</string>
    <string name="dialogMessage">Cannot connect to databse server</string>
    <string name="dialogTitle">Conexion error</string>
    <string name="showLocation">Show location</string>
    <string name="favoursDone">favours done</string>
    <string name="timesHelped">times helped</string>
    <string name="userName">User Name</string>
    <string name="favours">Favours</string>
    <string name="favourites">Favourites</string>
    <string name="opinions">Opinions</string>

    <!---Login-->
    <string name="logIn">LOGIN</string>
    <string name="password">Password</string>
    <string name="dontHaveAcconut"> You don\'t have acconut ?</string>
    <string name="Register"> Register </string>

    <!---Configuration-->
    <string name="enable_noti">App notifications</string>
    <string name="message_noti">Messages notifications</string>
    <string name="Lenguage">Lenguage</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>



    <!---Register-->
    <string name="email">Email adress</string>
    <string name="phone">Phone numbrer</string>
    <string name="confirmPassword"> Confirm password </string>
    <string name="joinAfavour"> Join A Favour </string>
    <string name="or"> or </string>
    <string name="alredyHaveAcconut"> Alredy have an account? </string>
    <string name="regFacebook">Register with Facebook</string>
    <string name="regGmail">Register with Gmail</string>


    <!---MainPage-->
    <string name="goProfile">Go to profile</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="logOut">Log out</string>

    <!---Image descriptions-->
    <string name="logo" translatable="false">A favour Logo</string>
    <string name="handshackeIcon" translatable="false">Handshake icon</string>
    <string name="imageicon" translatable="false">Image Icon icon</string>
    <string name="stars" translatable="false">Stars icon</string>

    <!--Pujar/Editar anunci-->
    <string name="title">Title</string>
    <string name="favourxfavour">Favour x favour</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="selectCategory">Select a category</string>
    <string name="uploadFavour">Upload favour</string>
    <string name="editFavour">Edit favour</string>
    <string name="upload">Upload</string>
    <string name="edit_">Edit</string>

    <string name="daytoday">Day to day things</string>
    <string name="computing">Computing</string>
    <string name="reparations">Reparations</string>
    <string name="others">Others</string>
    <string name="help">Help</string>
    <string name="config">Configuration</string>
    <string name="messages">Messages</string>
    <string name="title_activity_edit_profile_view" translatable="false">EditProfileView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_anunci_view_" translatable="false">Map</string>
    <string name="faqs" translatable="true">Frequent questions</string>
    <string name="faqst1">How i can upload a Favour?</string>
    <string name="faqsd1">To upload a favor just go to the main menu and press the "Upload a favor" button.</string>
    <string name="privacity">Privacity</string>
    <string name="privacityt1">Our privacy policy</string>
    <string name="privacityd1">BLA BLA BLA</string>
    <string name="security">Security</string>
    <string name="securityt1">Security of information</string>
    <string name="securityd1">BLA BLA BLA 2</string>
    <string name="validEmail">Make sure to introduce a valid email</string>
    <string name="containnumber">The password must contain at least one number</string>
    <string name="opinionUploaded" />
    <string name="opinionUpdated" />
    <string name="editOpinion" />
    <string name="uploadOpinion" />
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="sendmessage">Type a message</string>
    <string name="send">Send</string>


</resources>
