<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    tools:context=".Views.LoginView">

    <EditText
        android:id="@+id/user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailSubject"
        app:layout_constraintBottom_toTopOf="@+id/mobile_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mobile_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/pwd_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pwd_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_pwd_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="223dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10dp"
        android:background="#FF3B5B"
        android:onClick="clickOnRegister"
        android:text="@string/Register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/facebook_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_pwd_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/facebook_btn"
        android:layout_width="223dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10dp"
        android:background="#3846EB"
        android:text="@string/regFacebook"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/gmail_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gmail_btn"
        android:layout_width="223dp"
        android:layout_height="37dp"
        android:layout_marginBottom="144dp"
        android:background="#F61111"
        android:text="@string/regGmail"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:contentDescription="@string/AFAVOUR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/afavour_logo" />

    <TextView
        android:id="@+id/join_txt"
        android:layout_width="189dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:text="@string/joinAfavour"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <View
        android:id="@+id/line_view"
        android:layout_width="408dp"
        android:layout_height="3dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail_btn"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/o_txt"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail_btn"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/go_to_login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alredyHaveAcconut"
        android:textColor="#3F51B5"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/o_txt"
        app:layout_constraintVertical_bias="0.405" />

</androidx.constraintlayout.widget.ConstraintLayout>