<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <TextView
            android:id="@+id/config_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/config"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="42dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/back_arrow"
            android:onClick="backArrowAction"
            app:layout_constraintStart_toStartOf="@+id/up_panel"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow" />

    </RelativeLayout>

    <Switch
        android:id="@+id/app_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/enable_noti"
        android:theme="@style/SCBSwitch"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/message_not"
        style="@style/SCBSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/message_noti"
        android:theme="@style/SCBSwitch"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Lenguage"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <Spinner
        android:id="@+id/lenguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"

        android:paddingLeft="0dp" />

</LinearLayout>